--- a/doctors.html
+++ b/doctors.html
@@ -27,63 +27,76 @@
 			<div><a href="#department">Отделения</a></div>
 		</div>
 	</div>	
-<div class="specialists-clinic">СПЕЦИАЛИСТЫ НАШЕЙ КЛИНИКИ</div>
+	<div class="menu-clinic-doctors">
+<div class="specialists-clinic" id="doctors">СПЕЦИАЛИСТЫ НАШЕЙ КЛИНИКИ</div>
 <div> <p>Наши врачи ​имеют высокую квалификацию, значительный опыт работы, посещают различные семинары и конференции, повышая свой профессиональный уровень. Результаты лечения в нашей стоматологии подтверждают точность определения диагноза и выбранного метода лечения.</p> </div>
 <div class="search"></div>
+</div>
 <div class="menu-specialists">
 <div class="menu-doctors">
-<div class="doctor"><img src="images/doctor-1.png"/></div>
+<div><img class="doctor" src="images/doctor-1.png"/></div>
 <div class="doctor-name">Ватман Анна Сергеевна</div>
 <div class="specialization">Стоматолог-гигиенист</div>
 <div class="more-detailed">ПОДРОБНЕЕ</div>
 </div>
 <div class="menu-doctors">
-	<div class="doctor"><img src="images/doctor-2.png"/></div>
+	<div><img class="doctor" src="images/doctor-2.png"/></div>
 	<div class="doctor-name">Задкова Виктория Сергеевна</div>
 	<div class="specialization">Стоматолог-терапевт</div>
 	<div class="more-detailed">ПОДРОБНЕЕ</div>
 	</div>
 	<div class="menu-doctors">
-		<div class="doctor"><img src="images/doctor-3.png"/></div>
+		<div><img class="doctor" src="images/doctor-3.png"/></div>
 		<div class="doctor-name">Соколов Иван Игорьевич</div>
 		<div class="specialization">Стоматолог-терапевт</div>
 		<div class="more-detailed">ПОДРОБНЕЕ</div>
 		</div>
 		<div class="menu-doctors">
-			<div class="doctor"><img src="images/doctor-4.png"/></div>
+			<div><img class="doctor" src="images/doctor-4.png"/></div>
 			<div class="doctor-name">Неверов Сергей Сергеевич</div>
 			<div class="specialization">Хирург-имплантолог</div>
 			<div class="more-detailed">ПОДРОБНЕЕ</div>
 			</div>
 			<div class="menu-doctors">
-				<div class="doctor"><img src="images/doctor-5.png"/></div>
+				<div><img class="doctor" src="images/doctor-5.png"/></div>
 				<div class="doctor-name">Коняшкина Ольга Ивановна</div>
 				<div class="specialization">Стоматолог-терапевт</div>
 				<div class="more-detailed">ПОДРОБНЕЕ</div>
 				</div>	
 				<div class="menu-doctors">
-					<div class="doctor"><img src="images/doctor-6.png"/></div>
+					<div><img class="doctor" src="images/doctor-6.png"/></div>
 					<div class="doctor-name">Шпаков  Дмитрий Сергеевич</div>
 					<div class="specialization">Стоматолог-ортопед</div>
 					<div class="more-detailed">ПОДРОБНЕЕ</div>
 					</div>	
-					</div>	
 </div>
-
 <div class="our-details">
+	<div class="line-detail">
 	<div class="details">2002 «Dentо Plus» - семейная стоматологическая  клиника в Санкт-Петербурге.</div>
-	<div class="details">Мы в соц сетях <img src="images/facebook-icon.png"/></div>
+	<div class="details">Мы в соц сетях
+		<div class="facebook"> <img src="images/facebook-icon.png"/></div>
+		</div>
+	</div>
+	<div class="line-our">
+		<div class="line-our-detail">
 	<div class="our"><img src="images/circle-info-icon.png"/> НАШИ АДРЕСА:</div>
 	<div class="details">Санкт-Петербург, 324372, ул. Ильюшина, 5, к. 3<br>
 		Санкт-Петербург, 324372, ул. Плюшина, 8, к. 1<br>
 		Санкт-Петербург, 324372, ул.Галюшина, 28</div>
+		</div>
+		<div class="line-our-detail">
 		<div class="our"> <img src="images/phone-icon.png"/>НАШИ ТЕЛЕФОНЫ:</div>
 		<div class="details">+7 (823) 555-357-31<br>
 			+7 (823) 555-357-32<br>
 			+7 (823) 555-357-33</div>
+			</div>
+			<div class="line-our-detail">
 			<div class="our"><img src="images/email-icon.png"/> НАША ПОЧТА:</div>
 			<div class="details">DentoPlus@gmail.com</div>
+			</div>
+			</div>
 			<div class="license"> Лицензия |Политика конфиденциальности </div>
 </div>
+	</div>
 </body>
 </html>
