--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	</style>
 </head>
 <body>
+	<a href="service.html">Сервисы</a>
+	<a href="doctors.html">Доктора</a>
 	<div class="menu">
 		<div class="menu-button">
 			<div class="name">Dentо Plus</div>
@@ -27,59 +29,73 @@
 			<div><a href="#department">Отделения</a></div>
 		</div>
 	</div>	
-<div class="menu-img">
-	<img src="images/hero.png"/>
+<div class="menu-hero">
+	<div class="inner-container">
+<div class="title">Стоматологическая клиника <p>Dentо Plus</p></div>
+<div class="text">Стоматологическая клиника Dentо Plus - это лучшие врачи, самое современное оборудование, инновационные технологии и материалы и индивидуальный подход!</div>
+</div>
+<div class="button-submit-hero">	
+<button class="menu-submit">ЗАПИСАТЬСЯ</button>
 </div>
 </div>
 <div class="our-services" id="services">НАШИ УСЛУГИ</div>
 <div class="clinic-services">
-	<div class="service-img"><img src="images/service-1.png"/></div>
-	<div class="service-img"><img src="images/service-2.png"/></div>
 	<div class="service-img"><img src="images/service-3.png"/></div>
+	<div class="service-img"><img src="images/service-2.png"/></div>
+	<div class="service-img"><img src="images/service-1.png"/></div>
 </div>
 <div class="menu-clinic">
-<div class="background-img">
-	<img src="images/background-1.png"/>
-</div>
+<div class="menu-background-clinic">
 <div class="about-the-clinic" id="about-us">О КЛИНИКЕ</div>
 <div class="clinic">Клиника Dentо Plus  – это крупнейший стоматологический центр для взрослых и детей, ведущий свою историю с 2002 года.<br>
 	 <br>Мы работаем для вас ежедневно, включая выходные и праздничные дни, предоставляя качественное медицинское обслуживание без проволочек и очередей, комплексно и в сжатые сроки.<br>
 	 <br>Мы не стоим на месте, мы постоянно развиваемся, непрерывно совершенствуем свою работу. Именно поэтому у нас так много приверженных пациентов, которые нас рекомендуют и приходят к нам семьями. Доверяя свое здоровье и здоровье ваших детей нашим специалистам.</div>
 	</div>
-	 <div><a href="#detailed">Подробнее</a></div>
-	
-
+	<div class="button-detailed">
+	 <div class="detailed"><a href="#detailed">ПОДРОБНЕЕ</a></div>
+	</div>
+	</div>
+	 <div class="your-reviews" id="reviews">ВАШИ ОТЗЫВЫ</div>
 <div class="menu-reviews">
-	<div class="your-reviews" id="reviews">ВАШИ ОТЗЫВЫ</div>
-	<div class="your-feedback">
+		<div class="your-feedback">
 		<img src="images/client-1.png"/>
+		<div class="name-client-feedback">
 		<div class="name-client">Анастасия</div>
 		<div class="feedback">Хочу оставить положительный отзыв о клинике. Все сотрудники отзывчивые, доброжелательные. На просьбы пациентов реагируют оперативно. И самое главное каждому пациенту подходят индивидуально. Прошу поощрить сотрудников в денежном виде.</div>
 	</div>
+</div>
 	<div class="your-feedback">
 		<img src="images/client-2.png"/>
+		<div class="name-client-feedback">
 		<div class="name-client">Пётр</div>
 		<div class="feedback">Благодарю персонал за работу. Вежливые, внимательные, компетентные. Очень рад, что познакомилась с вашим медицинским центром. Всё чисто, аккуратно и максимум внимания.</div>
 	</div>
+	</div>
 		<div class="your-feedback">
 		<img src="images/client-3.png"/>
+		<div class="name-client-feedback">
 		<div class="name-client">Иван</div>
 		<div class="feedback">Благодарю весь персонал за внимательное чуткое отношение к пациентам.</div>
 	</div>	
+	</div>
 	<div class="your-feedback">
 		<img src="images/client-4.png"/>
+		<div class="name-client-feedback">
 		<div class="name-client">Евгения</div>	
 		<div class="feedback">Спасибо вам огромное за бережноное нежное отношение к детям. Нам очень понравилось общение с персоналом вашего центра!</div>
 	</div>	
 	</div>
-	<div class="map-img"><img src="images/map-background.png" ></div>
-	<div class="our-branches" id="department">НАШИ ОТДЕЛЕНИЯ</div>
+	</div>
+	<div class="our-branches">
+		<div class="our-department" id="department">НАШИ ОТДЕЛЕНИЯ</div>
+	<div class="menu-inner-container">
+	<div class="menu-address">
 	<div class="address">
-		<div>
+		<div class="branches-icon">
 		<img src="images/location-icon.png"/>
 	   <div class="branches">Санкт-Петербург, 324372, ул. Ильюшина, 5, к. 3</div>
 	</div>
-	<div><img src="images/circle-info-icon.png"/> 
+	<div class="operating-icon"><img src="images/circle-info-icon.png"/> 
 	<div class="operating-mode">Режим работы:</div>  
 					 </div>
 		             <div class="branches">Пн-Вс с 8:00 до 18:00
@@ -87,11 +103,11 @@
 		<div class="branch-phone">+7 (823) 555-357-31</div>
 	</div>
 	<div class="address">
-		<div>
+		<div class="branches-icon">
 		<img src="images/location-icon.png"/>
 	   <div class="branches">Санкт-Петербург, 324372, ул. Плюшина, 8, к. 1</div>
 	</div>
-	<div>
+	<div class="operating-icon">
 		<img src="images/circle-info-icon.png"/>
 	                <div class="operating-mode">Режим работы:</div> 
 					</div>
@@ -100,31 +116,47 @@
 		<div class="branch-phone">+7 (823) 555-357-32</div>
 </div>
 <div class="address">
-	<div>
+	<div class="branches-icon">
 	<img src="images/location-icon.png"/>
    <div class="branches">Санкт-Петербург, 324372, ул.Галюшина, 28</div>
 </div>
-<div> <img src="images/circle-info-icon.png"/>
+<div class="operating-icon"> <img src="images/circle-info-icon.png"/>
                     <div class="operating-mode">Режим работы:</div>
 					</div>
                     <div class="branches">Пн-Вс с 8:00 до 18:00
 					<br>без перерывов и выходных</div>
 	<div class="branch-phone">+7 (823) 555-357-33</div>
 </div>
+</div>
+</div>
+</div>
 <div class="our-details">
+	<div class="line-detail">
 	<div class="details">2002 «Dentо Plus» - семейная стоматологическая  клиника в Санкт-Петербурге.</div>
-	<div class="details">Мы в соц сетях <img src="images/facebook-icon.png"/></div>
+	<div class="details">Мы в соц сетях
+		<div class="facebook"> <img src="images/facebook-icon.png"/></div>
+		</div>
+	</div>
+	<div class="line-our">
+		<div class="line-our-detail">
 	<div class="our"><img src="images/circle-info-icon.png"/> НАШИ АДРЕСА:</div>
 	<div class="details">Санкт-Петербург, 324372, ул. Ильюшина, 5, к. 3<br>
 		Санкт-Петербург, 324372, ул. Плюшина, 8, к. 1<br>
 		Санкт-Петербург, 324372, ул.Галюшина, 28</div>
+		</div>
+		<div class="line-our-detail">
 		<div class="our"> <img src="images/phone-icon.png"/>НАШИ ТЕЛЕФОНЫ:</div>
 		<div class="details">+7 (823) 555-357-31<br>
 			+7 (823) 555-357-32<br>
 			+7 (823) 555-357-33</div>
+			</div>
+			<div class="line-our-detail">
 			<div class="our"><img src="images/email-icon.png"/> НАША ПОЧТА:</div>
 			<div class="details">DentoPlus@gmail.com</div>
+			</div>
+			</div>
 			<div class="license"> Лицензия |Политика конфиденциальности </div>
 </div>
+	</div>
 </body>
 </html>
