--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
     <head>
 		<meta charset="utf-8" />
   		<title>Стоматология</title>
-		  <link rel="stylesheet" type="text/css" href="style.css"/>
+		  <link rel="stylesheet" type="text/css" href="service.css"/>
 		  <link rel="stylesheet" type="text/css" href="reset.css"/>
 	<script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=ZTTtxPZkzg5kWYCRUCcwisPmEQc1RdzTUzPeDA_Dp_FIaq1MS9fLJMB1gOKIB8xaWsGHENmTS286NC5SlGpcuBWhAykV0pyoy0GzpdnFUGE" charset="UTF-8"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,9 +27,68 @@
 			<div><a href="#department">Отделения</a></div>
 		</div>
 	</div>	
-<div class="menu-img">
-	<img src="images/hero.png"/>
+<div class="menu-hero">
+	<div class="inner-container">
+		<div class="title">Стоматологическая клиника <p>Dentо Plus</p></div>
+		<div class="text">Стоматологическая клиника Dentо Plus - это лучшие врачи, самое современное оборудование, инновационные технологии и материалы и индивидуальный подход!</div>
+		</div>
+		<div class="button-submit-hero">	
+		<button class="menu-submit">ЗАПИСАТЬСЯ</button>
+		</div>
+		</div>
+<div class="menu-caries-treatment">
+	<div class="treatment">ЛЕЧЕНИЕ КАРИЕСА</div>
+	<div class="caries-treatment-container">
+		<div class="caries">На ранней стадии кариозного процесса («кариес белого пятна») повреждения лишь незначительно затрагивают эмаль. В этом случае стоматолог рекомендует процедуру реминерализации, в ходе которой проводит аппликации особого мусса или геля, насыщающие эмаль ионами фтора и кальция. В течение нескольких сеансов эмаль значительно укрепляется, что позволяет предотвратить развитие заболевания.
+
+		Кроме того, в клиниках МЕДИ активно используется инновационный метод лечения пораженной кариесом эмали с применением препарата Icon (Infiltration conception). После нанесения препарат плотно закрывает поврежденные кариесом поверхности, позволяя без анестезии и хирургического вмешательства затормозить процесс развития заболевания. Уникальная технология подходит в первую очередь для лечения самых юных пациентов МЕДИ, раз и навсегда избавляя ребенка от стресса, связанного с видом и звуками бормашины.</div>
+		<img class="caries-patient-images" src="images/patient.png"/>
+	</div>
+</div>
+<div class="menu-prices-service">
+	<div class="prices-service">ЦЕНЫ НА УСЛУГУ «ЛЕЧЕНИЕ КАРИЕСА»</div>
+	<div class="prices-menu">
+	<div class="caries-treatment">Лечение глубокого кариеса с постановкой пломбы световой полимеризации	от 3 700 руб.</div>
+	<div class="treatment-seal">Пломбирование поверхностей зуба	от 4 500 руб.</div>
+	<div class="caries-treatment">Лечение кариеса с применением микроскопа	от 4 800 руб.</div>
+	<div class="treatment-seal">Лечение кариеса эмали методом «ICON»	от 3 400 руб.</div>
 </div>
 </div>
+<div class="our-services" id="services">ДРУГИЕ УСЛУГИ</div>
+<div class="clinic-services">
+	<div class="service-img"><img src="images/service-3.png"/></div>
+	<div class="service-img"><img src="images/service-2.png"/></div>
+	<div class="service-img"><img src="images/service-1.png"/></div>
+</div>
+
+
+<div class="our-details">
+	<div class="line-detail">
+	<div class="details">2002 «Dentо Plus» - семейная стоматологическая  клиника в Санкт-Петербурге.</div>
+	<div class="details">Мы в соц сетях
+		<div class="facebook"> <img src="images/facebook-icon.png"/></div>
+		</div>
+	</div>
+	<div class="line-our">
+		<div class="line-our-detail">
+	<div class="our"><img src="images/circle-info-icon.png"/> НАШИ АДРЕСА:</div>
+	<div class="details">Санкт-Петербург, 324372, ул. Ильюшина, 5, к. 3<br>
+		Санкт-Петербург, 324372, ул. Плюшина, 8, к. 1<br>
+		Санкт-Петербург, 324372, ул.Галюшина, 28</div>
+		</div>
+		<div class="line-our-detail">
+		<div class="our"> <img src="images/phone-icon.png"/>НАШИ ТЕЛЕФОНЫ:</div>
+		<div class="details">+7 (823) 555-357-31<br>
+			+7 (823) 555-357-32<br>
+			+7 (823) 555-357-33</div>
+			</div>
+			<div class="line-our-detail">
+			<div class="our"><img src="images/email-icon.png"/> НАША ПОЧТА:</div>
+			<div class="details">DentoPlus@gmail.com</div>
+			</div>
+			</div>
+			<div class="license"> Лицензия |Политика конфиденциальности </div>
+</div>
+	</div>
 </body>
 </html>
