--- a/doctors.html
+++ b/doctors.html
@@ -18,6 +18,7 @@
 <body>
 	<div class="menu">
 		<div class="menu-button">
+			<div class="menu-name-dento">
 			<div class="name">Dentо Plus</div>
 			<div class="sections">
 			<div><a href="#services">Услуги</a></div>
@@ -27,10 +28,14 @@
 			<div><a href="#department">Отделения</a></div>
 		</div>
 	</div>	
+	</div>
 	<div class="menu-clinic-doctors">
 <div class="specialists-clinic" id="doctors">СПЕЦИАЛИСТЫ НАШЕЙ КЛИНИКИ</div>
 <div> <p>Наши врачи ​имеют высокую квалификацию, значительный опыт работы, посещают различные семинары и конференции, повышая свой профессиональный уровень. Результаты лечения в нашей стоматологии подтверждают точность определения диагноза и выбранного метода лечения.</p> </div>
-<div class="search"></div>
+<div class="search">
+	
+	<input placeholder = " |  ФИО Врача">
+</div>
 </div>
 <div class="menu-specialists">
 <div class="menu-doctors">
