--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 	</style>
 </head>
 <body>
-	<a href="service.html">Сервисы</a>
-	<a href="doctors.html">Доктора</a>
 	<div class="menu">
 		<div class="menu-button">
+			<div class="menu-name-dento">
 			<div class="name">Dentо Plus</div>
 			<div class="sections">
 			<div><a href="#services">Услуги</a></div>
@@ -28,6 +27,7 @@
 			<div><a href="#reviews">Отзывы</a></div>
 			<div><a href="#department">Отделения</a></div>
 		</div>
+	</div>
 	</div>	
 <div class="menu-hero">
 	<div class="inner-container">
@@ -40,9 +40,31 @@
 </div>
 <div class="our-services" id="services">НАШИ УСЛУГИ</div>
 <div class="clinic-services">
-	<div class="service-img"><img src="images/service-3.png"/></div>
-	<div class="service-img"><img src="images/service-2.png"/></div>
-	<div class="service-img"><img src="images/service-1.png"/></div>
+	<div class="service-figure-arrow">
+	<span class="counterclockwise" style="font-size:60px; "> &#9668;</span>
+	<div class="service-img1">
+		<div class="figure">02</div>
+		<div class="arrow-tooth">
+		<div class="about-the-tooth">Лечение и <br> рестоврация зубов<br></div>
+		<div class="arrow">&rarr;</div>
+	</div>
+	</div>
+	<div class="service-img2">
+		<div class="figure">03</div>
+		<div class="arrow-tooth">
+		<div class="about-the-tooth">Протезирование <br> зубов<br></div>
+		<div class="arrow">&rarr;</div>
+	</div>
+</div>
+	<div class="service-img3">
+		<div class="figure">04</div>
+		<div class="arrow-tooth">
+		<div class="about-the-tooth">Профессиональная <br> чистка зубов<br></div>
+		<div class="arrow"><sub>&rarr;</sub></div>
+	</div>
+	</div>
+	<span class="counterclockwise" style="font-size:60px; "> &#9658;</span>
+</div>
 </div>
 <div class="menu-clinic">
 <div class="menu-background-clinic">
