--- a/service.html
+++ b/service.html
@@ -18,6 +18,7 @@
 <body>
 	<div class="menu">
 		<div class="menu-button">
+			<div class="menu-name-dento">
 			<div class="name">Dentо Plus</div>
 			<div class="sections">
 			<div><a href="#services">Услуги</a></div>
@@ -27,6 +28,7 @@
 			<div><a href="#department">Отделения</a></div>
 		</div>
 	</div>	
+	</div>
 <div class="menu-hero">
 	<div class="inner-container">
 		<div class="title">Стоматологическая клиника <p>Dentо Plus</p></div>
@@ -48,17 +50,39 @@
 <div class="menu-prices-service">
 	<div class="prices-service">ЦЕНЫ НА УСЛУГУ «ЛЕЧЕНИЕ КАРИЕСА»</div>
 	<div class="prices-menu">
-	<div class="caries-treatment">Лечение глубокого кариеса с постановкой пломбы световой полимеризации	от 3 700 руб.</div>
-	<div class="treatment-seal">Пломбирование поверхностей зуба	от 4 500 руб.</div>
-	<div class="caries-treatment">Лечение кариеса с применением микроскопа	от 4 800 руб.</div>
-	<div class="treatment-seal">Лечение кариеса эмали методом «ICON»	от 3 400 руб.</div>
+	<div class="caries-treatment">Лечение глубокого кариеса с постановкой пломбы световой полимеризации	от <span class="price1"> 3 700 </span>руб.</div>
+	<div class="treatment-seal">Пломбирование поверхностей зуба	от <span class="price2">4 500 </span>руб.</div>
+	<div class="caries-treatment">Лечение кариеса с применением микроскопа	от <span class="price1">4 800</span> руб.</div>
+	<div class="treatment-seal">Лечение кариеса эмали методом «ICON»	от <span class="price2">3 400 </span>руб.</div>
 </div>
 </div>
 <div class="our-services" id="services">ДРУГИЕ УСЛУГИ</div>
 <div class="clinic-services">
-	<div class="service-img"><img src="images/service-3.png"/></div>
-	<div class="service-img"><img src="images/service-2.png"/></div>
-	<div class="service-img"><img src="images/service-1.png"/></div>
+	<div class="service-figure-arrow">
+	<span class="counterclockwise" style="font-size:60px; "> &#9668;</span>
+	<div class="service-img1">
+		<div class="figure">02</div>
+		<div class="arrow-tooth">
+		<div class="about-the-tooth">Лечение и <br> рестоврация зубов<br></div>
+		<div class="arrow">&rarr;</div>
+	</div>
+	</div>
+	<div class="service-img2">
+		<div class="figure">03</div>
+		<div class="arrow-tooth">
+		<div class="about-the-tooth">Протезирование <br> зубов<br></div>
+		<div class="arrow">&rarr;</div>
+	</div>
+</div>
+	<div class="service-img3">
+		<div class="figure">04</div>
+		<div class="arrow-tooth">
+		<div class="about-the-tooth">Профессиональная <br> чистка зубов<br></div>
+		<div class="arrow"><sub>&rarr;</sub></div>
+	</div>
+	</div>
+	<span class="counterclockwise" style="font-size:60px; "> &#9658;</span>
+</div>
 </div>
 
 
