--- a/doctors.html
+++ b/doctors.html
@@ -27,6 +27,16 @@
 			<div><a href="#reviews">Отзывы</a></div>
 			<div><a href="#department">Отделения</a></div>
 		</div>
+		<div class="mobil-sections" id="mymobilSections">
+			<button onclick="openMenu()">Menu</button>
+			<div class="mobil" id="myContainer">
+				<a href="#services">Услуги</a>
+				<a href="#about-us">О нас</a>
+				<a href="#doctors">Врачи</a>
+				<a href="#reviews">Отзывы</a>
+				<a href="#department">Отделения</a>
+			</div>	
+		</div>
 	</div>	
 	</div>
 	<div class="menu-clinic-doctors">
@@ -103,5 +113,6 @@
 			<div class="license"> Лицензия |Политика конфиденциальности </div>
 </div>
 	</div>
+	<script src="script.js"></script>
 </body>
 </html>
