--- a/index.html
+++ b/index.html
@@ -27,8 +27,20 @@
 			<div><a href="#reviews">Отзывы</a></div>
 			<div><a href="#department">Отделения</a></div>
 		</div>
+		<div class="mobil-sections" id="mymobilSections">
+			<button onclick="openMenu()">Menu</button>
+		</div>
+	</div>
+			<div class="mobil" id="myContainer">
+				<a href="#services">Услуги</a>
+				<a href="#about-us">О нас</a>
+				<a href="#doctors">Врачи</a>
+				<a href="#reviews">Отзывы</a>
+				<a href="#department">Отделения</a>
+			
 	</div>
 	</div>	
+	
 <div class="menu-hero">
 	<div class="inner-container">
 <div class="title">Стоматологическая клиника <p>Dentо Plus</p></div>
@@ -180,5 +192,6 @@
 			<div class="license"> Лицензия |Политика конфиденциальности </div>
 </div>
 	</div>
+	<script src="script.js"></script>
 </body>
 </html>
